welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:48: error: Unmatched closing brace '}' ignored here
}
^